--- a/index.html
+++ b/index.html
@@ -38,9 +38,15 @@
             top: 10px;
             right: 10px;
             cursor: pointer;
-            color: #000000; /* Changed from white to black */
-            font-size: 1.5em;
+            color: #000000; /* Changed to black */
+            font-size: 2em; /* Made bigger */
             user-select: none;
+            text-shadow: 0 0 10px #000000; /* Added glow */
+            transition: text-shadow 0.3s ease;
+        }
+
+        .sidebar:hover {
+            text-shadow: 0 0 20px #000000; /* Stronger glow on hover */
         }
 
         .sidebar-menu {
@@ -126,7 +132,18 @@
             }
 
             .sidebar {
-                font-size: 1.2em;
+                font-size: 1.5em;
+            }
+
+            .sidebar-menu {
+                top: 60px;
+                right: 5px;
+                padding: 5px;
+            }
+
+            .sidebar-menu a {
+                padding: 8px;
+                font-size: 0.9em;
             }
         }
     </style>
@@ -147,9 +164,9 @@
         <a href="https://www.instagram.com/kashividhyapith?igsh=eWNyNjY0am5heTBs" target="_blank">Follow MGKVP on Instagram</a>
         <a href="https://www.instagram.com/uzairvibes?igsh=MXEwczdtd290aXl0Zw==" target="_blank">Talk to Developer on Instagram</a>
         <a href="https://chat.whatsapp.com/Im7qVdo3SgX22weOw8FfdZ" target="_blank">Join the WhatsApp Group</a>
-        <a href="https://uzairb2b.blogspot.com" target="_blank">Uzair B2B Services</a>
-        <a href="https://educationsimplified.github.io/internship/" target="_blank">Internships</a>
-        <a href="https://educationsimplified.github.io/skills/m" target="_blank">Skilled Courses</a>
+        <a href="https://uzairb2b.blogspot.com" target="_blank">Uzair B2B Services</a> <!-- New Menu Item -->
+        <a href="https://educationsimplified.github.io/internship/" target="_blank">Internships</a> <!-- New Menu Item -->
+        <a href="https://educationsimplified.github.io/skills/" target="_blank">Skilled Courses</a> <!-- New Menu Item -->
     </div>
 
     <!-- Main Content -->
