--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
-            background-image: url('https://images.collegedunia.com/public/college_data/images/appImage/25957_MGKASHI_APP.jpg?h=260&w=360&mode=crop');
+            background-image: url('https://spinesoftsettle.com/d1phghk7e?qusu=75&refer=https%3A%2F%2Fwww.wallpaperflare.com%2Fsearch%3Fwallpaper%3Djournalist&kw=%5B%22journalist%22%2C%221080p%22%2C%222k%22%2C%224k%22%2C%225k%22%2C%22hd%22%2C%22wallpapers%22%2C%22free%22%2C%22download%22%2C%22wallpaper%22%2C%22flare%22%5D&key=c8841ecd07aa9bacf489f5b6ac2d7b79&scrWidth=393&scrHeight=876&tz=5.5&v=24.8.8162&ship=&psid=FEATURES-1829_new_0&sub3=invoke_layer&res=14.229&dev=r&uuid=73a44b6f-2876-4c59-afd4-0d2330bb045b%3A3%3A1');
             background-size: cover;
             background-position: center;
             height: 100vh;
@@ -172,7 +172,7 @@
 
     <!-- Top Right Logo -->
     <div class="header" onclick="spinLogoAndRedirect()">
-        <img src="https://upload.wikimedia.org/wikipedia/en/d/d3/Mahatma_Gandhi_Kashi_Vidyapith_logo.png" alt="MGKVP Logo">
+        <img src="educationSimplifiedlogo.png" alt="MGKVP Logo">
     </div>
 
     <!-- Sidebar Button on Left -->
@@ -181,7 +181,7 @@
     <!-- Sidebar Menu -->
     <div class="sidebar-menu" id="sidebarMenu">
         <a href="https://wa.link/4jrun4" target="_blank">Contact the Developer</a>
-        <a href="https://www.instagram.com/kashividhyapith?igsh=eWNyNjY0am5heTBs" target="_blank">Follow MGKVP on Instagram</a>
+        <a href="https://youtube.com/@uzairentertainment?si=z_WBJrxYp0miibon" target="_blank">SUBSCRIBE Uzair Entertainment </a>
         <a href="https://www.instagram.com/uzairvibes?igsh=MXEwczdtd290aXl0Zw==" target="_blank">Talk to Developer on Instagram</a>
         <a href="https://chat.whatsapp.com/Im7qVdo3SgX22weOw8FfdZ" target="_blank">Join the WhatsApp Group</a>
         <a href="https://uzairb2b.blogspot.com" target="_blank">Uzair B2B Services</a>
@@ -191,7 +191,7 @@
 
     <!-- Main Content -->
     <div class="content">
-        <h1>MGKVP Department of Journalism and Mass Communication</h1>
+        <h1>JOURNALISM SIMPLIFIED ONLINE</h1>
         <h2>Providing the Digital Shift to Technology Learning—All the Journalism Tools in One Place.</h2>
         <button class="glowing-button" onclick="redirectToJoin()">Click Below to Join</button>
     </div>
@@ -225,7 +225,7 @@
             logo.style.transform = 'rotate(360deg)';
 
             setTimeout(function() {
-                window.location.href = 'https://mgkvp.ac.in/';
+                window.location.href = 'https://educationsimplified.github.io/india';
                 logo.style.transform = 'rotate(0deg)';
             }, 600); // Matches the transition duration
         }
