--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
-            background-image: url('https://spinesoftsettle.com/d1phghk7e?qusu=75&refer=https%3A%2F%2Fwww.wallpaperflare.com%2Fsearch%3Fwallpaper%3Djournalist&kw=%5B%22journalist%22%2C%221080p%22%2C%222k%22%2C%224k%22%2C%225k%22%2C%22hd%22%2C%22wallpapers%22%2C%22free%22%2C%22download%22%2C%22wallpaper%22%2C%22flare%22%5D&key=c8841ecd07aa9bacf489f5b6ac2d7b79&scrWidth=393&scrHeight=876&tz=5.5&v=24.8.8162&ship=&psid=FEATURES-1829_new_0&sub3=invoke_layer&res=14.229&dev=r&uuid=73a44b6f-2876-4c59-afd4-0d2330bb045b%3A3%3A1');
+            background-image: url('https://online.sbu.edu/sites/default/files/shutterstock_652051432.jpg');
             background-size: cover;
             background-position: center;
             height: 100vh;
@@ -172,7 +172,7 @@
 
     <!-- Top Right Logo -->
     <div class="header" onclick="spinLogoAndRedirect()">
-        <img src="educationSimplifiedlogo.png" alt="MGKVP Logo">
+        <img src="EDUCATION SIMPLIFIED INDIA.png" alt="EDUCATION SIMPLIFIED Logo">
     </div>
 
     <!-- Sidebar Button on Left -->
@@ -191,7 +191,7 @@
 
     <!-- Main Content -->
     <div class="content">
-        <h1>JOURNALISM SIMPLIFIED ONLINE</h1>
+        <h1>MGKVP JOURNALISM ONLINE</h1>
         <h2>Providing the Digital Shift to Technology Learning—All the Journalism Tools in One Place.</h2>
         <button class="glowing-button" onclick="redirectToJoin()">Click Below to Join</button>
     </div>
