--- a/index.html
+++ b/index.html
@@ -199,8 +199,8 @@
     <!-- Footer with Glowing Effect -->
     <div class="footer">
         <a href="https://www.instagram.com/uzairvibes?igsh=MXEwczdtd290aXl0Zw==" target="_blank" style="color: #ffffff; text-decoration: none;">
-            Made by: Uzair Ahmed @2024, B.A.(Hons) Mass Communication Student
-        </a>
+            Created by: Uzair Ahmed @2024, B.A.(Hons) Mass Communication Student: (it's not a MGKVP Official Website)
+      </a>
     </div>
 
     <script>
@@ -232,7 +232,7 @@
 
         // Redirect to Join Link
         function redirectToJoin() {
-            window.location.href = 'https://educationsimplified.github.io/universe/';
+            window.location.href = 'https://educationsimplified.github.io/india';
         }
     </script>
 
