--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
-            background-image: url('https://png.pngtree.com/thumb_back/fw800/background/20231221/pngtree-retro-old-english-newspaper-background-photo-image_15548852.png');
+            background-image: url('https://png.pngtree.com/thumb_back/fh260/background/20230706/pngtree-3d-rendering-background-of-live-news-concept-in-journalism-image_3818400.jpg');
             background-size: cover;
             background-position: center;
             height: 100vh;
