--- a/index.html
+++ b/index.html
@@ -221,20 +221,24 @@
         <a href="https://educationsimplified.github.io/skills/" target="_blank">Skilled Courses</a>
     </div>
 
+    <!-- Page Links Above MGKVP Section -->
+    <div class="page-links">
+        <a href="about.html">About</a>
+        <a href="home.html">Home</a>
+        <a href="notes.html">Notes</a>
+    </div>
+
     <!-- Main Content -->
     <div class="content">
         <h1>MGKVP JOURNALISM ONLINE</h1>
         <h2>Providing the Digital Shift to Technology Learning—All the Journalism Tools in One Place.</h2>
         <button class="glowing-button" onclick="redirectToJoin()">Click Below to Join</button>
+    </div>
 
-        <!-- Page Links with Glowing Effect -->
-        <div class="page-links">
-            <a href="about.html">About</a>
-            <a href="home.html">Home</a>
-            <a href="notes.html">Notes</a>
-            <a href="gallery.html">Gallery</a>
-            <a href="seminar.html">Seminars</a>
-        </div>
+    <!-- Page Links Below the Button -->
+    <div class="page-links">
+        <a href="gallery.html">Gallery</a>
+        <a href="seminar.html">Seminars</a>
     </div>
 
     <!-- Footer -->
