--- a/index.html
+++ b/index.html
@@ -202,12 +202,12 @@
 </head>
 
 <body>
-    <!-- Top Right Logo -->
+   <!-- Top Right Logo -->
     <div class="header" onclick="spinLogoAndRedirect()">
         <img src="EDUCATION SIMPLIFIED INDIA.png" alt="EDUCATION SIMPLIFIED Logo">
     </div>
 
-    <!-- Sidebar Button on Left -->
+ <!-- Sidebar Button on Left -->
     <div class="sidebar" onclick="toggleSidebar()">☰</div>
 
     <!-- Sidebar Menu -->
@@ -221,24 +221,20 @@
         <a href="https://educationsimplified.github.io/skills/" target="_blank">Skilled Courses</a>
     </div>
 
-    <!-- Page Links Above MGKVP Section -->
-    <div class="page-links">
-        <a href="about.html">About</a>
-        <a href="home.html">Home</a>
-        <a href="notes.html">Notes</a>
-    </div>
-
     <!-- Main Content -->
     <div class="content">
         <h1>MGKVP JOURNALISM ONLINE</h1>
         <h2>Providing the Digital Shift to Technology Learning—All the Journalism Tools in One Place.</h2>
         <button class="glowing-button" onclick="redirectToJoin()">Click Below to Join</button>
-    </div>
 
-    <!-- Page Links Below the Button -->
-    <div class="page-links">
-        <a href="gallery.html">Gallery</a>
-        <a href="seminar.html">Seminars</a>
+        <!-- Page Links with Glowing Effect -->
+        <div class="page-links">
+            <a href="about.html">About</a>
+            <a href="home.html">Home</a>
+            <a href="notes.html">Notes</a>
+            <a href="gallery.html">Gallery</a>
+            <a href="seminar.html">Seminars</a>
+        </div>
     </div>
 
     <!-- Footer -->
@@ -247,17 +243,34 @@
     </div>
 
     <script>
-        function spinLogoAndRedirect() {
-            const logo = document.querySelector('.header img');
-            logo.style.transform = 'rotate(360deg)';
-            setTimeout(() => {
-                window.location.href = 'https://educationsimplified.in';
-            }, 600);
+ // Toggle Sidebar Menu with Spin Effect
+        function toggleSidebar() {
+            var sidebarMenu = document.getElementById('sidebarMenu');
+            var sidebarIcon = document.querySelector('.sidebar');
+
+            if (sidebarMenu.style.display === 'block') {
+                sidebarMenu.style.display = 'none';
+                sidebarIcon.style.transform = 'rotate(-360deg)';
+            } else {
+                sidebarMenu.style.display = 'block';
+                sidebarIcon.style.transform = 'rotate(360deg)';
+            }
         }
 
-        function toggleSidebar() {
-            const sidebarMenu = document.getElementById('sidebarMenu');
-            sidebarMenu.style.display = sidebarMenu.style.display === 'block' ? 'none' : 'block';
+        // Spin Logo and Redirect
+        function spinLogoAndRedirect() {
+            var logo = document.querySelector('.header');
+
+            logo.style.transform = 'rotate(360deg)';
+
+            setTimeout(function() {
+                window.location.href = 'https://educationsimplified.github.io/india';
+                logo.style.transform = 'rotate(0deg)';
+            }, 600); // Matches the transition duration
+        }
+// Redirect to Join Link
+        function redirectToJoin() {
+            window.location.href = 'https://educationsimplified.github.io/india';
         }
 
         function redirectToJoin() {
