--- a/about.html
+++ b/about.html
@@ -11,7 +11,293 @@
 
         <link rel="stylesheet" href="styles.css">
     </head>
+<style>
+/* General Body Styling */
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    color: #333;
+    background-color: #f4f4f4;
+    background-image: url('https://png.pngtree.com/thumb_back/fh260/background/20230706/pngtree-3d-rendering-background-of-live-news-concept-in-journalism-image_3818400.jpg');
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    line-height: 1.6;
+}
 
+/* Header Styling */
+header {
+    background-color: #f3f3f3;
+    padding: 10px 0;
+    text-align: center;
+}
+
+.header img {
+    width: 100px;
+    height: auto;
+}
+
+header h1 {
+    color: #ff6600;
+}
+
+header h2 {
+    color: #333;
+}
+
+/* Contact Section in Header */
+.header-contact {
+    background-color: #333;
+    color: white;
+    text-align: center;
+    padding: 5px 0;
+}
+
+.header-contact a {
+    color: #ff6600;
+}
+
+/* Sidebar and Menu Styling */
+.sidebar {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    cursor: pointer;
+    color: #ffffff;
+    font-size: 2em;
+    font-weight: bold;
+    user-select: none;
+    text-shadow: 0 0 10px #ffffff;
+    transition: transform 0.6s ease, text-shadow 0.3s ease;
+}
+
+.sidebar:hover {
+    text-shadow: 0 0 20px #ffffff;
+}
+
+.sidebar-menu {
+    display: none;
+    position: absolute;
+    top: 50px;
+    left: 10px;
+    background-color: rgba(0, 0, 0, 0.7);
+    border-radius: 5px;
+    padding: 10px;
+    z-index: 100;
+}
+
+.sidebar-menu a {
+    display: block;
+    color: #ffffff;
+    text-decoration: none;
+    padding: 10px;
+    border-bottom: 1px solid #ffffff;
+}
+
+.sidebar-menu a:last-child {
+    border-bottom: none;
+}
+
+.sidebar-menu a:hover {
+    background-color: #333333;
+}
+
+/* Content Section Styling */
+.content {
+    text-align: center;
+    padding: 20px;
+    background-color: rgba(0, 0, 0, 0.6);
+    border-radius: 10px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+    max-width: 90%;
+    margin: 0 auto;
+}
+
+.content h1 {
+    font-size: 2.5em;
+    margin-bottom: 10px;
+}
+
+.content h2 {
+    font-size: 1.5em;
+    margin-bottom: 30px;
+}
+
+/* Button Styling */
+.glowing-button {
+    background-color: #00e6e6;
+    color: #000000;
+    border: none;
+    padding: 15px 30px;
+    font-size: 1.2em;
+    border-radius: 5px;
+    cursor: pointer;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    box-shadow: 0 0 20px #00e6e6, 0 0 30px #00e6e6, 0 0 40px #00e6e6;
+    transition: box-shadow 0.3s, transform 0.3s;
+}
+
+.glowing-button:hover {
+    box-shadow: 0 0 30px #00b3b3, 0 0 40px #00b3b3, 0 0 50px #00b3b3;
+    transform: scale(1.05);
+}
+
+/* Page Links Styling */
+.page-links {
+    margin-top: 30px;
+}
+
+.page-links a {
+    color: #00e6e6;
+    font-size: 1.5em;
+    text-decoration: none;
+    margin: 10px;
+    padding: 10px 20px;
+    border: 2px solid #00e6e6;
+    border-radius: 5px;
+    transition: all 0.3s ease;
+    text-shadow: 0 0 10px #00e6e6;
+}
+
+.page-links a:hover {
+    background-color: #00e6e6;
+    color: #000000;
+    box-shadow: 0 0 20px #00e6e6, 0 0 30px #00e6e6, 0 0 40px #00e6e6;
+    transform: scale(1.05);
+}
+
+/* Image Styling */
+img {
+    max-width: 200px;
+    height: auto;
+    border-radius: 50%;
+    display: block;
+    margin: 20px auto;
+}
+
+/* Card Styling */
+.cards {
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+    flex-wrap: wrap;
+}
+
+.card {
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    max-width: 300px;
+    text-align: center;
+    margin: 10px;
+}
+
+.card h3 {
+    color: #ff6600;
+    font-size: 22px;
+    margin-bottom: 15px;
+}
+
+.card p {
+    font-size: 16px;
+    color: #555;
+}
+
+/* Popular Courses Section */
+.popular-courses ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+.popular-courses ul li {
+    margin: 5px 0;
+}
+
+.popular-courses ul li a {
+    text-decoration: none;
+    color: #ff6600;
+}
+
+.popular-courses ul li a:hover {
+    text-decoration: underline;
+}
+
+/* Footer Styling */
+footer {
+    background-color: #333;
+    color: white;
+    text-align: center;
+    padding: 10px 0;
+}
+
+.footer {
+    position: absolute;
+    bottom: 10px;
+    text-align: center;
+    color: #ffffff;
+    font-size: 0.8em;
+    text-shadow: 0 0 10px #ffffff;
+    transition: text-shadow 0.3s ease;
+}
+
+.footer:hover {
+    text-shadow: 0 0 20px #ffffff;
+}
+
+/* Media Queries for Responsiveness */
+@media (max-width: 768px) {
+    .cards {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .content h1 {
+        font-size: 2em;
+    }
+
+    .content h2 {
+        font-size: 1.2em;
+    }
+
+    .glowing-button {
+        padding: 10px 20px;
+        font-size: 1em;
+    }
+
+    .header img {
+        width: 80px;
+    }
+
+    .sidebar {
+        font-size: 1.5em;
+    }
+
+    .sidebar-menu {
+        top: 60px;
+        left: 5px;
+        padding: 5px;
+    }
+
+    .sidebar-menu a {
+        padding: 8px;
+        font-size: 0.9em;
+    }
+
+    .page-links a {
+        font-size: 1.2em;
+        padding: 8px 15px;
+    }
+}
+
+    
+</style>
 <body>
    <!-- Top Right Logo -->
     <div class="header" onclick="spinLogoAndRedirect()">
