--- a/index.html
+++ b/index.html
@@ -225,21 +225,22 @@
     <div class="content">
         <h1>MGKVP JOURNALISM ONLINE</h1>
         <h2>Providing the Digital Shift to Technology Learning—All the Journalism Tools in One Place.</h2>
-        <button class="glowing-button" onclick="redirectToJoin()">Click Below to Join</button>
+        <button class="glowing-button" onclick="redirectToJoin()">Click Below For Notes</button>
 
         <!-- Page Links with Glowing Effect -->
         <div class="page-links">
             <a href="about.html">About</a>
-            <a href="home.html">Home</a>
-            <a href="notes.html">Notes</a>
+            <a href="https://educationsimplified.github.io/mgkvp">Home</a>
+            <a href="skills.html">Skills</a>
             <a href="gallery.html">Gallery</a>
-            <a href="seminar.html">Seminars</a>
+            <a href="job.html">Job/Intership</a>
         </div>
     </div>
 
     <!-- Footer -->
     <div class="footer">
-        Powered by Uzair Ahmed | All Rights Reserved © 2024
+ <a href="https://www.instagram.com/uzairvibes?igsh=MXEwczdtd290aXl0Zw==" target="_blank" style="color: #ffffff; text-decoration: none;">
+            Created by: Uzair Ahmed @2024, B.A.(Hons) Mass Communication Student: (it's not a MGKVP Official Website)
     </div>
 
     <script>
@@ -274,7 +275,7 @@
         }
 
         function redirectToJoin() {
-            window.location.href = 'https://chat.whatsapp.com/Im7qVdo3SgX22weOw8FfdZ';
+            window.location.href = 'https://educationsimplified.github.io/universe';
         }
     </script>
 </body>
