--- a/job.html
+++ b/job.html
@@ -20,6 +20,12 @@
         h1 {
             margin-top: 0;
         }
+        .header-img {
+            max-width: 150px; /* Set a max width for the header image */
+            height: auto;
+            margin: 10px auto; /* Center the image */
+            border-radius: 8px; /* Rounded corners */
+        }
         .section {
             background-color: white;
             padding: 20px;
