--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 
     <!-- Main Content -->
     <div class="content">
-        <h1>MGKVP JOURNALISM ONLINE</h1>
+        <h1>MGKVP EDUCATION ONLINE</h1>
         <h2>Providing the Digital Shift to Technology Learning—All the Journalism Tools in One Place.</h2>
         <button class="glowing-button" onclick="redirectToJoin()">Click Below For Notes</button>
 
