--- a/job.html
+++ b/job.html
@@ -97,8 +97,8 @@
     <div class="section">
         <h2>Suggested YouTube Videos</h2>
         <div class="video-links">
-            <a href="https://youtu.be/UTPDqZM1v9k?si=hEhvlXMwClDpgGWG" target="_blank">Video 1: How to Create a Resume</a>
-            <a href="https://youtu.be/PWbWwHR_DFk?si=qnIUbS27nWtpqLyT" target="_blank">Video 2: Resume Writing Tips</a>
+            <a href="https://youtu.be/UTPDqZM1v9k?si=hEhvlXMwClDpgGWG" target="_blank">Video 1: How to Create a Resume</a><br>
+            <a href="https://youtu.be/PWbWwHR_DFk?si=qnIUbS27nWtpqLyT" target="_blank">Video 2: Resume Writing Tips</a><br>
             <a href="https://youtu.be/xviRYJFrB0g?si=43rxDF85-sX8VdmF" target="_blank">Video 3: Best Practices for Resume</a>
         </div>
     </div>
